--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-# VITE_BASE_URL='http://localhost:3000'
-
-VITE_BASE_URL='http://111.230.25.143:3000'
+VITE_BASE_URL='http://localhost:3000'
+# 
+# VITE_BASE_URL='https://iccmsm.com'
