--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@varlet/ui": "^2.21.0",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "less": "^4.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "tdesign-mobile-vue": "^1.0.9",
     "vant": "^4.7.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
@@ -27,6 +30,7 @@
     "@vue/tsconfig": "^0.4.0",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
